--- a/frontend/src/Component/SlideBar/SlideBar.css
+++ b/frontend/src/Component/SlideBar/SlideBar.css
@@ -2,6 +2,10 @@
     display: flex;
     background-color: #F0DBDB;
     height: 100vh;
+    width: 250px;
+    position: fixed;
+    top: 0;
+    left: 0;
 
 }
 
